src/styles/components/ServicePage.css
.services__container {
  min-height: 100vh;
  padding: 28px 0 100px 28px;
  color: var(--primary-text-color);
}
.services__container h1 {
  font-size: 2em;
  font-family: "SF Mono";
  letter-spacing: 2px;
  color: var(--primary-color);
}
.services__card__container {
  width: 100%;
  padding: 15px 0px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  padding-bottom: 50px;
}
.services__card {
  padding-top: 18px;
  position: relative;
  background-color: #091629;
  min-width: 400px;
  height: 325px;
  margin-top: 50px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  border-radius: 12px;
  box-shadow: 0 4px 60px rgba(0, 0, 0, 0.5);
  -webkit-border-radius: 12px;
  -moz-border-radius: 12px;
  -ms-border-radius: 12px;
  -o-border-radius: 12px;
}
.services__card h3 {
  padding: 10px 24px;
  font-family: "SF Mono";
  letter-spacing: 1px;
  font-weight: bolder;
  font-size: 1.4em;
}
.services__card__icon__container {
  margin: 10px 24px;
  width: 90px;
  height: 90px;
  /* background-color: yellow; */
  margin-bottom: 12px;
  padding: 10px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 100%;
  -webkit-border-radius: 100%;
  -moz-border-radius: 100%;
  -ms-border-radius: 100%;
  -o-border-radius: 100%;
}
.services__card:nth-of-type(1) .services__card__icon__container {
  background-color: #31aed445;
}
.services__card:nth-of-type(2) .services__card__icon__container {
  background-color: #e31f7149;
}
.services__card:nth-of-type(3) .services__card__icon__container {
  background-color: #8938b440;
}
.services__card:nth-of-type(4) .services__card__icon__container {
  background-color: #56ce7240;
  z-index: 0;
}
.services__card__icon__container img {
  width: 60px;
  height: 60px;
  position: absolute;
  z-index: 1;
}
.services__card__text {
  line-height: 1.6;
  font-family: "Montserrat";
  padding: 10px 24px;
  font-size: 1em;
}
.services__card__border {
  width: 100%;
  height: 10px;
  background-color: black;
  border-bottom-left-radius: 12px;
  border-bottom-right-radius: 12px;
}
.services__card:nth-of-type(1) .services__card__border {
  background-color: #31afd4;
}
.services__card:nth-of-type(2) .services__card__border {
  background-color: #e31f71;
}
.services__card:nth-of-type(3) .services__card__border {
  background-color: #8838b4;
}
.services__card:nth-of-type(4) .services__card__border {
  background-color: #20bf55;
}
@media only screen and (min-width: 577px) and (max-width: 768px) {
  .services__card__container {
    margin-left: auto;
    margin-right: auto;
    width: 500px;
    /* margin: 02px; */
  }
}

@media only screen and (min-width: 768px) and (max-width: 992px) {
  .services__card {
    width: 550px;
    height: 300px;
  }
}

@media only screen and (min-width: 993px) and (max-width: 1200px) {
  .services__card__container {
    justify-content: space-between;
  }
  .services__card {
    width: 48%;
    height: 330px;
  }
}

@media only screen and (min-width: 1200px) and (max-width: 1400px) {
  .services__card__container {
    justify-content: space-between;
  }
  .services__card {
    width: 47%;
    height: 340px;
  }
}

@media only screen and (min-width: 1401px) {
  .services__card__container {
    justify-content: space-between;
    padding: 0 3%;
  }
  .services__card {
    width: 47%;
    height: 340px;
    margin-top: 100px;
  }
}

/* Service card hover */
.services__card {
  transition: 1200ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
  -webkit-transition: 1200ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
  -moz-transition: 1200ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
  -ms-transition: 1200ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
  -o-transition: 1200ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
}
.services__card__border {
  transition: 1200ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
  -webkit-transition: 1200ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
  -moz-transition: 1200ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
  -ms-transition: 1200ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
  -o-transition: 1200ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
}
.services__card:hover {
  /* background-color: var(--primary-color); */
  color: black;
  transform: scale(1.1);
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
  -ms-transform: scale(1.1);
  -o-transform: scale(1.1);
}

.services__card:hover .services__card__border {
  width: 0;
}

.services__card:nth-of-type(1):hover {
  background-color: #e31f71;
  color: white;
}
.services__card:nth-of-type(2):hover {
  background-color: #31afd4;
}
.services__card:nth-of-type(3):hover {
  background-color: #20bf55;
}
.services__card:nth-of-type(4):hover {
  color: white;
  background-color: #8838b4;
}

